package protobuf;
option java_package = "vn.com.vng.zalopay.data.protobuf";
option java_outer_classname = "ZPMsgProtos";

enum MessageStatus {
	RECEIVED = 1;
	READ = 2;
	DELETED = 3;
	VIEWED = 4;
}

enum OSType {
	IOS = 1;
	ANDROID = 2;
	WINDOW_PHONE = 3;
}

enum MessageType {
	AUTHEN_LOGIN = 1;
	FEEDBACK = 2;
	PING_SERVER = 3;
	MSG_TO_USER_REQUEST = 4;
	RECOVERY_REQUEST = 5;
	PAYMENT_REQUEST = 6;
}

enum ServerMessageType {
	AUTHEN_LOGIN_RESULT = 1;
	PONG_CLIENT = 2;
	KICK_OUT_USER = 51;
	PUSH_NOTIFICATION = 101;
	MSG_TO_USER_RESPONSE = 4;
	RECOVERY_RESPONSE = 5;
	PAYMENT_RESPONSE = 6;
}

enum RecoveryOrder {
	ORDER_DESCEND = 0;
	ORDER_ASCEND = 1;
}

message MessageSendUser{
	required bytes	data = 1;
	required string	signature = 2; 
	optional int64	expiretime = 3;
	optional uint64 usrid = 4;
	optional string pushtitle = 5;
	optional string pushembeddata = 6;
	optional uint32 sourceid = 7;
	optional uint32 msgtype = 8;
}

message RecoveryMessage{
	required bytes data = 1;
	optional int32 status = 2;
	optional uint64 mtaid = 3;
	optional uint64 mtuid = 4;
}

message DataRecoveryResponse{
	repeated RecoveryMessage messages = 1;
	required uint64 starttime = 2;
}

message MessageLogin{
	required uint64 usrid = 1;
	required string	token = 2;
	optional int32 ostype = 3;
	optional string devicetoken = 4;
}

message ResultAuth{
	required uint64 usrid = 1;
	required int32	result = 2;
	optional int32	code = 3;
	optional string	msg = 4;
}

message DataResponseUser{
	required int32 msgtype = 1;
	required bytes	data = 2;
	optional int32 status = 3;
	optional uint64 mtaid = 4;
	optional uint64 mtuid = 5;
	optional uint32 sourceid = 6;
}

message MsgPushUser{
	required string	devicetoken = 1;
	required int32	ostype = 2;
	required string	alert = 3;
	optional string sound = 4;
	optional int32  badge = 5;
	optional string actionkey = 6;
	optional string pushembeddata = 7;
	optional string serviceid = 8;
	optional string msgid = 9;
}

message StatusMessageClient{
	required uint64 userid = 1;
	required int32 status = 2;
	optional uint64 mtaid = 3;
	optional uint64 mtuid = 4;
	optional uint32 sourceid = 5;
}

message MessageConnectionInfo{
	required uint64 userid = 1;
	optional uint64 embeddata = 2;
}

message MessageUserToUser{
	required uint64 receiverid = 1;
	optional bytes data = 2;
}

message MessageRecoveryRequest {
	required uint64 starttime = 1;
	required uint32 count = 2;
	optional int32 order = 3;
}

message UpdateStatus {
	required int32 status = 1;
	repeated uint64 msgids = 2;
}

message MessageToGroup {
	required bytes	data = 1;
	required string	signature = 2; 
	optional int64	expiretime = 3;
	repeated uint64 uids = 4;
	optional string pushtitle = 5;
	optional string pushembeddata = 6;
	optional uint64 systemid = 7;
	optional uint32 msgtype = 8;
}

message PairKeyValue {
	required string key = 1;
	required string value = 2;
}

message MapRequestMessage{
	required uint64	requestid = 1;
	required string domain = 2;
	optional string method = 3;
	optional uint32 port = 4;
	optional string	path = 5;
	repeated PairKeyValue params = 6;
	repeated PairKeyValue headers = 7;
}

message MapResponseMessage{
	required uint64 requestid = 1;
	required int32 resultcode = 2;
	optional string resultdata = 3;
}
